subida de imagenes

--- a/clientes-app/src/app/footer/footer.component.html
+++ b/clientes-app/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-dark rounded-top text-center footer">
-    <div class="container py-2">
+<footer class="bg-dark rounded-top text-center footer d-flex">
+    <div class="container py-2 d-flex justify-content-center align-items-center">
         <p class="text-white my-2">
             &copy; {{autor.nombre + ' ' + autor.apellido}}
         </p>
