--- a/clientes-app/src/app/crear-cliente/crear-cliente.component.html
+++ b/clientes-app/src/app/crear-cliente/crear-cliente.component.html
@@ -50,23 +50,40 @@
           </div>
         </div>
       </div>
+      <div class="row mx-auto">
+        <div class="mb-3 col-6">
+          <label for="email" class="form-label">Email</label>
+          <input
+            class="form-control form-control-sm"
+            type="email"
+            [(ngModel)]="cliente.email"
+            name="email"
+            value=""
+            #email="ngModel"
+          />
+          <div
+            class="alert alert-danger"
+            *ngIf="email.invalid && (email.dirty || email.touched)"
+          >
+            <div *ngIf="email.errors?.['required']">Email es requerido</div>
+            <div *ngIf="email.errors?.['email']">
+              Formato de Correo invalido.
+            </div>
+          </div>
+        </div>
 
-      <div class="mb-3 text-center mx-5">
-        <label for="email" class="form-label">Email</label>
-        <input
-          class="form-control form-control-sm"
-          type="email"
-          [(ngModel)]="cliente.email"
-          name="email"
-          value=""
-          #email="ngModel"
-        />
-        <div
-          class="alert alert-danger"
-          *ngIf="email.invalid && (email.dirty || email.touched)"
-        >
-          <div *ngIf="email.errors?.['required']">Email es requerido</div>
-          <div *ngIf="email.errors?.['email']">Formato de Correo invalido.</div>
+        <div class="mb-3 col-6">
+          <label for="createAt" class="form-label">Fecha</label>
+
+          <input
+            [matDatepicker]="myDatepicker"
+            class="form-control form-control-sm"
+            [(ngModel)]="cliente.createAt"
+            name="createAt"
+            style="display: inline;"
+          />
+          <mat-datepicker-toggle [for]="myDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #myDatepicker></mat-datepicker>
         </div>
       </div>
 
