--- a/clientes-app/src/app/detalle-cliente/detalle-cliente.component.html
+++ b/clientes-app/src/app/detalle-cliente/detalle-cliente.component.html
@@ -1,9 +1,85 @@
-<div class="card text-bg-dark mb-3">
-  <div class="card-header">{{ titulo }}</div>
-  <div class="card-body">
-    <div class="input-group">
-        <input (change)="seleccionarFoto($event)" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-        <button (click)="subirFoto()" class="btn btn-primary" type="button" id="inputGroupFileAddon04">Subir</button>
+<div class="abrir-modal animacion fadeIn" *ngIf="modalService.modal">
+  <div class="modal" tabindex="-1" style="display: block">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">{{ titulo }}</h5>
+          <button
+            (click)="cerrarModal()"
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <ul *ngIf="cliente" class="list-group text-dark mb-3">
+                  <li class="list-group-item active">{{ cliente.nombre }}</li>
+                  <li class="list-group-item">{{ cliente.apellido }}</li>
+                  <li class="list-group-item">{{ cliente.email }}</li>
+                  <li class="list-group-item">
+                    {{ cliente.createAt | date : "fullDate" }}
+                  </li>
+                </ul>
+
+                <div class="input-group mb-0">
+                  <input
+                    (change)="seleccionarFoto($event)"
+                    type="file"
+                    class="form-control"
+                    id="inputGroupFile04"
+                    aria-describedby="inputGroupFileAddon04"
+                    aria-label="Upload"
+                  />
+                  <button
+                    (click)="subirFoto()"
+                    [disabled]="!fotoSeleccionada"
+                    class="btn btn-primary"
+                    type="button"
+                    id="inputGroupFileAddon04"
+                  >
+                    Subir
+                  </button>
+                </div>
+
+                <div *ngIf="progreso > 0" class="progress">
+                  <div
+                    class="progress-bar progress-bar-striped"
+                    role="progressbar"
+                    [ngStyle]="{ width: progreso + '%' }"
+                    attr.aria-valuenow="{{ progreso }}"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  >
+                    {{ progreso }}%
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <img
+                  *ngIf="cliente?.foto"
+                  src="http://localhost:8080/api/uploads/img/{{ cliente.foto }}"
+                  alt="{{ cliente.foto }}"
+                  class="img-thumbnail rounded"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            (click)="cerrarModal()"
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Cerrar
+          </button>
+        </div>
       </div>
+    </div>
   </div>
 </div>
